--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vitória Carinhena - Bolsas de Luxo Autênticas</title>
+    <title>Vitoria Carinhena</title>
     <meta name="description" content="Descubra bolsas de luxo autênticas cuidadosamente selecionadas. Elegância e sofisticação em cada peça." />
     <meta name="author" content="Vitória Carinhena" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
