--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tenor+Sans&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="221bc6f8-a331-47b7-9a65-eeee2ac701ef" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Vitoria Carinhena" />
+    <meta property="og:description" content="Esse site foi totalmente feito para você" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://vitoriacarinhena.vercel.app/assets/fotoVi-OV_usnbM.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
